# traact_run_env

./: CMakeLists.txt  README  README.md  conanfile.py
.github/workflows/: ci_workflow.yml
cmake/: traact_default_library_final.cmake  traact_default_library_setup.cmake  traact_setup_targets.cmake
